<resources>
    <string name="app_name" translatable="false">Bacapad</string>
    <string name="login_label">Login</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="username_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="greetings_login">Hello</string>
    <string name="missed_login">Welcome back, you have been missed</string>
    <string name="title_story" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="story_sinopsis" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut sapien id urna tincidunt pretium. In luctus odio lectus, sit amet convallis dui pretium vitae. Nunc interdum a nunc et finibus. Sed accumsan est vitae venenatis euismod. Nulla sed nunc augue. In iaculis ac felis ac commodo. Vivamus molestie sollicitudin orci nec convallis. Morbi consequat tincidunt tempus. Vestibulum eget eleifend justo, et semper diam. Mauris scelerisque nisi non purus efficitur, vel scelerisque tellus mattis. Donec luctus, leo a blandit accumsan, nulla sem tempor nulla, id sollicitudin tortor diam nec velit. Curabitur sed leo at est varius ultrices bibendum ut tortor. Maecenas cursus tincidunt nulla, nec laoreet neque ornare at. Nam blandit elementum ligula at bibendum.</string>
    <string name="thumbnail_story">This is a story picture</string>
    <string name="bt_camera">Camera</string>
    <string name="bt_gallery">Gallery</string>
    <string name="bt_upload">Upload</string>
    <string name="image_login">Image of person with computer</string>
    <string name="to_register">Don\'t have an account yet? click to register</string>
    <string name="greeting_silahkan">Please,</string>
    <string name="greeting_register">Create an account first!</string>
    <string name="floating_girl">Image of people floating</string>
    <string name="password_alert">Password cannot be less than 6 characters</string>
    <string name="invalid_email_alert">Incorrect email format</string>
    <string name="must_filled">Can\'t be empty</string>
    <string name="name_hint">Enter your name here</string>
    <string name="email_hint">Enter your email here</string>
    <string name="password_hint">Enter your password here</string>
    <string name="error_message">There is an error</string>
    <string name="logout">Logout</string>
    <string name="button_add">Button for add the new story</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="enter_story">What\'s your mind?</string>
    <string name="login_success">Login Successfully</string>
    <string name="login_failed">Wrong email or password</string>
    <string name="appwidget_text" translatable="false">Bacapad Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is bacapad\'s widget</string>
    <string name="empty_text" translatable="false">NO DATA</string>
    <string name="image_empty">Please, insert image first!</string>
    <string name="permissions">Not getting permission</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="my_location">My location</string>
    <string name="try_again">Click to try again</string>
    <string name="location_not_found">Location not found</string>
</resources>